# C-test

./: .gitignore  CMakeLists.txt  README.md
.github/: ci.yml
src/: cli.c  cli.h  denoise_bm3d.c  denoise_bm3d.h  hdr_fusion.c  hdr_fusion.h  io_raw.c  io_raw.h  main.c  tiff_writer.c  tiff_writer.h
test/: test_denoise.c  test_main.c
